--- a/Tree/unionFind/readme
+++ b/Tree/unionFind/readme
@@ -1,4 +1,5 @@
-如果我们只是想知道一个元素是否在集合中，可以通过 Python 或其他语言中的 set 集合来解决。而如果我们想知道两个元素是否属于同一个集合，则仅用一个 set 集合就很难做到了。这就需要用到我们接下来要讲解的「并查集」结构。
+如果我们只是想知道一个元素是否在集合中，可以通过 Python 或其他语言中的 set 集合来解决。而如果我们想知道两个元素是否属于同一个集合，则仅用一个 set 集合就很难做到了。
+这就需要用到我们接下来要讲解的「并查集」结构。
 
 根据上文描述，我们就可以定义一下「并查集」结构所支持的操作接口：
 
